--- a/views/Login/login.html
+++ b/views/Login/login.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <form>
-        Username:<br>
-        <input type="text" name="username" id="username"><br>
+        Email:<br>
+        <input type="text" name="email" id="email"><br>
         Password:<br>
         <input type="password" name="password" id="password">
         <button id="login_button">
