--- a/views/table-basic.html
+++ b/views/table-basic.html
@@ -103,29 +103,19 @@
                 <!-- Sidebar navigation-->
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav">
-                        <li> <a class="waves-effect waves-dark" href="index.html" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">Dashboard</span></a>
-                        </li>
-                        <li> <a class="waves-effect waves-dark" href="pages-profile.html" aria-expanded="false"><i class="mdi mdi-account-check"></i><span class="hide-menu">Profile</span></a>
-                        </li>
-                        <li> <a class="waves-effect waves-dark" href="table-basic.html" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Top Podcasts</span></a>
-                        </li>
-                        <li> <a class="waves-effect waves-dark" href="icon-material.html" aria-expanded="false"><i class="mdi mdi-emoticon"></i><span class="hide-menu">Icons</span></a>
-                        </li>
-                        <li> <a class="waves-effect waves-dark" href="pages-blank.html" aria-expanded="false"><i class="mdi mdi-book-open-variant"></i><span class="hide-menu">Blank Page</span></a>
-                        </li>
-                        <li> <a class="waves-effect waves-dark" href="pages-error-404.html" aria-expanded="false"><i class="mdi mdi-help-circle"></i><span class="hide-menu">Error 404</span></a>
-                        </li>
+                         <li> <a class="waves-effect waves-dark" href="index.html" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">Home</span></a>
+                         </li>
+                         <li> <a class="waves-effect waves-dark" href="pages-profile.html" aria-expanded="false"><i class="mdi mdi-account-check"></i><span class="hide-menu">Profile</span></a>
+                         </li>
+                         <li> <a class="waves-effect waves-dark" href="dashboard.html" aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu">Dashboard</span></a>
+                         </li>
+                         <li> <a class="waves-effect waves-dark" href="table-basic.html" aria-expanded="false"><i class="mdi mdi-arrow-up-drop-circle-outline"></i><span class="hide-menu">Top Podcasts</span></a>
+                         </li>
                     </ul>
                 </nav>
                 <!-- End Sidebar navigation -->
             </div>
             <!-- End Sidebar scroll-->
-            <!-- Bottom points-->
-            <div class="sidebar-footer">
-                <!-- item--><a href="" class="link" data-toggle="tooltip" title="Settings"><i class="ti-settings"></i></a>
-                <!-- item--><a href="" class="link" data-toggle="tooltip" title="Email"><i class="mdi mdi-gmail"></i></a>
-                <!-- item--><a href="" class="link" data-toggle="tooltip" title="Logout"><i class="mdi mdi-power"></i></a> </div>
-            <!-- End Bottom points-->
         </aside>
         <!-- ============================================================== -->
         <!-- End Left Sidebar - style you can find in sidebar.scss  -->
@@ -143,10 +133,10 @@
                 <!-- ============================================================== -->
                 <div class="row page-titles">
                     <div class="col-md-5 col-8 align-self-center">
-                        <h3 class="text-themecolor m-b-0 m-t-0">Table</h3>
+                        <h3 class="text-themecolor m-b-0 m-t-0">Top Podcasts</h3>
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                            <li class="breadcrumb-item active">Table</li>
+                            <li class="breadcrumb-item"><a href="">Home</a></li>
+                            <li class="breadcrumb-item active">Top Podcasts</li>
                         </ol>
                     </div>
                 </div>
@@ -167,8 +157,7 @@
                                         <thead>
                                             <tr>
                                                 <th>#</th>
-                                                <th>First Name</th>
-                                                <th>Last Name</th>
+                                                <th>Name of Podcast</th>
                                                 <th>Username</th>
                                             </tr>
                                         </thead>
@@ -176,37 +165,31 @@
                                             <tr>
                                                 <td>1</td>
                                                 <td>Deshmukh</td>
-                                                <td>Prohaska</td>
                                                 <td>@Genelia</td>
                                             </tr>
                                             <tr>
                                                 <td>2</td>
                                                 <td>Deshmukh</td>
-                                                <td>Gaylord</td>
                                                 <td>@Ritesh</td>
                                             </tr>
                                             <tr>
                                                 <td>3</td>
                                                 <td>Sanghani</td>
-                                                <td>Gusikowski</td>
                                                 <td>@Govinda</td>
                                             </tr>
                                             <tr>
                                                 <td>4</td>
                                                 <td>Roshan</td>
-                                                <td>Rogahn</td>
                                                 <td>@Hritik</td>
                                             </tr>
                                             <tr>
                                                 <td>5</td>
                                                 <td>Joshi</td>
-                                                <td>Hickle</td>
                                                 <td>@Maruti</td>
                                             </tr>
                                             <tr>
                                                 <td>6</td>
                                                 <td>Nigam</td>
-                                                <td>Eichmann</td>
                                                 <td>@Sonu</td>
                                             </tr>
                                         </tbody>
@@ -224,13 +207,6 @@
             <!-- End Container fluid  -->
             <!-- ============================================================== -->
             <!-- ============================================================== -->
-            <!-- footer -->
-            <!-- ============================================================== -->
-            <footer class="footer">
-                © 2017 Material Pro Admin by wrappixel.com
-            </footer>
-            <!-- ============================================================== -->
-            <!-- End footer -->
             <!-- ============================================================== -->
         </div>
         <!-- ============================================================== -->
